# mosek-pod

./: CMakeLists.txt  README.md  mosek.pc.in
test/: CMakeLists.txt
